@@ -1,3 +1,7 @@
+2004-09-24 Craig Franklin <craigfranklin@users.sourceforge.net>
+  * gputils 0.12.4 Released.
+  * Allow odd relocation addresses in gplink and gpasm.
+
 2004-09-16 Craig Franklin <craigfranklin@users.sourceforge.net>
   * Improved banksel and pagesel directives.
 
